# systematics-v0.0.3

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md
data/: mod.rs
data/by_component/: coherence_attribute.rs  connective_characters.rs  connective_designation.rs  mod.rs  term_character.rs  term_designation.rs
data/by_geometry/: k1.rs  k10.rs  k11.rs  k12.rs  k2.rs  k3.rs  k4.rs  k5.rs  k6.rs  k7.rs  k8.rs  k9.rs  mod.rs
data/by_metadata/: k1.rs  k10.rs  k11.rs  k12.rs  k2.rs  k3.rs  k4.rs  k5.rs  k6.rs  k7.rs  k8.rs  k9.rs  mod.rs
data/by_semantics/: decad.rs  dodecad.rs  dyad.rs  ennead.rs  heptad.rs  hexad.rs  mod.rs  monad.rs  octad.rs  pentad.rs  tetrad.rs  triad.rs  undecad.rs
data/by_system/: decad.rs  default_decad.rs  default_dodecad.rs  default_dyad.rs  default_ennead.rs  default_heptad.rs  default_hexad.rs  default_monad.rs  default_octad.rs  default_pentad.rs  default_tetrad.rs  default_triad.rs  default_undecad.rs  dodecad.rs  dyad.rs  ennead.rs  heptad.rs  hexad.rs  mod.rs  monad.rs  octad.rs  pentad.rs  tetrad.rs  triad.rs  undecad.rs
data/by_topology/: k1.rs  k10.rs  k11.rs  k12.rs  k2.rs  k3.rs  k4.rs  k5.rs  k6.rs  k7.rs  k8.rs  k9.rs  mod.rs
data/by_vocabulary/: decad.rs  dodecad.rs  dyad.rs  ennead.rs  heptad.rs  hexad.rs  k1.rs  k10.rs  k11.rs  k12.rs  k2.rs  k3.rs  k4.rs  k5.rs  k6.rs  k7.rs  k8.rs  k9.rs  mod.rs  monad.rs  octad.rs  pentad.rs  tetrad.rs  triad.rs  undecad.rs
src/: lib.rs  main.rs
src/core/: geometry.rs  mod.rs  topology.rs
src/graphql/: mod.rs  types.rs
